# sdd-utils

./: .gitignore  CMakeLists.txt  README.md  SDD-compile-times.md  compile-times.md
dave/: mk.sh
dave/cnf/: toyota-2013-minus-tundra.cnf  toyota-2013-minus-tundra.cnf.sdd  toyota-2013-minus-tundra.pl.dnnf.txt  toyota-2013-minus-tundra.pl.txt
dave/cnf/camry/: camry.cnf  camry.cnf.nnf  camry.cnf.sdd  camry.sd-dnnf.txt
dave/cnf/tundra/: tundra.cnf  tundra.cnf.nnf  tundra.cnf.sdd  tundra.sd-dnnf.txt
dave/src/: dave.c
